[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "height_map_generator_musg_io"
version = "0.0.1"
authors = [{ name = "Matt Musgrove", email = "Matt@Musgrove.io" }]
description = "Contains components needed to generate a height map."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MttMsgrvDev/height-map-generator-lib-py"
Issues = "https://github.com/MttMsgrvDev/height-map-generator-lib-py/issues"
